<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity" >
    
<TextView 
        android:id="@+id/tutorial_title"
        style="?android:textAppearanceLarge"
        android:text="@string/choose_bottle"
        android:textStyle="bold"
        android:gravity="center|top"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingTop="30dp"
        android:background="@color/blue_background"/>

<FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
	    android:layout_below="@id/tutorial_title" >

	<LinearLayout
       android:id="@+id/linear_layout"
       android:orientation="vertical"
       android:layout_width="match_parent"
	   android:layout_height="match_parent" >
	   
	   	<FrameLayout
			 android:id="@+id/map_frame"
			 android:layout_width="fill_parent"
			 android:layout_height="0dp"
			 android:layout_weight="3" >
			    	
			<fragment 
				 android:id="@+id/map"
				 android:layout_width="match_parent"
				 android:layout_height="match_parent"
				 class="com.google.android.gms.maps.SupportMapFragment" />
	
		</FrameLayout>
        		
       <RelativeLayout
       android:id="@+id/bottom_box"
       android:orientation="vertical"
       android:layout_width="match_parent"
	   android:layout_height="120dp" >
		    
 		    	<TextView
 		    	    android:id="@+id/color_box"
 		    	    android:layout_width="match_parent"
 		    	    android:layout_height="3dp"
 		    	    android:layout_marginBottom="5dp"
 		    	    android:background="@color/light_grey" />
 		    	
 		    	<TextView
			        android:id="@+id/distance_text"
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:text="@string/closest_distance"
			        android:textSize="30sp" 
			        android:textStyle="bold"
			        android:layout_below="@id/color_box"
			        android:layout_marginTop="15dp"
			        android:layout_marginLeft="20dp"
			        android:layout_marginRight="10dp" />
 		    	
 		    	<ImageView
			        android:id="@+id/water_mark"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:scaleType="fitXY"
			        android:layout_below="@id/color_box"
			        android:layout_toRightOf="@id/distance_text"
			        android:layout_marginLeft="10dp"
			        android:layout_marginTop="10dp"
			        android:src="@drawable/water_mark" 
			        android:contentDescription="@string/water_mark"
			        android:visibility="visible" />
 		    	
 		    	<TextView
			        android:id="@+id/nearest_tap_text"
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:text="@string/nearest_tap_text"
			        android:textSize="18sp"
			        android:layout_below="@id/distance_text"
			        android:layout_marginLeft="20dp"
			        android:layout_marginRight="10dp" />
 		    	
 		    	<ImageView
			        android:id="@+id/blue_bg"
			        android:layout_width="100dp"
			        android:layout_height="120dp"
			        android:layout_below="@id/color_box"
			        android:layout_alignParentRight="true"
			        android:layout_marginTop="120dp"
			        android:layout_marginRight="10dp"
			        android:src="@drawable/blue_bg" 
			        android:contentDescription="@string/water_bottle"
			        android:visibility="visible" />
 		    	
 		    	<ImageView
			        android:id="@+id/water_bottle"
			        android:layout_width="125dp"
			        android:layout_height="fill_parent"
			        android:layout_below="@id/color_box"
			        android:layout_alignParentRight="true"
			        android:layout_marginTop="0dp"
			        android:src="@drawable/holo1" 
			        android:contentDescription="@string/water_bottle"
			        android:visibility="visible" />
	
		</RelativeLayout>
		
	</LinearLayout>
	
</FrameLayout>

<android.support.v4.view.ViewPager
			     android:id="@+id/pager"
			     android:layout_width="match_parent"
			     android:layout_height="match_parent" />

</RelativeLayout>
